[package]
name = "secprompt"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Kleinespel <conradk@conradk.com>", "stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/secprompt"

[lib]
name = "secprompt"
path = "lib.rs"

[dependencies]
zeroize = "1"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = ["Win32_Foundation", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Security"]
